gnome-settings-daemon (2.26.1-3) UNRELEASED; urgency=low

  * Add a watch file.

 -- Emilio Pozuelo Monfort <pochu@ubuntu.com>  Fri, 10 Jul 2009 17:56:17 +0200

gnome-settings-daemon (2.26.1-2) unstable; urgency=low

  * 03_maintainer_mode.patch: new patch, add AM_MAINTAINER_MODE. Fixes 
    FTBFS.
  * Regenerate 70_relibtoolize.patch.

 -- Josselin Mouette <joss@debian.org>  Fri, 29 May 2009 16:19:52 +0200

gnome-settings-daemon (2.26.1-1) unstable; urgency=low

  * New upstream release.
    + 20_gstreamer.patch: install the plugin although pulse is disabled. 
    + Refresh 70_relibtoolize.patch.
  * Move the autostart file to /usr/share/gnome/autostart.
  * gnome-settings-daemon.postinst:
    + Remove the old autostart file if needed.
    + Only remove the xrdb stuff upon upgrades from pre-2.24.1.

 -- Josselin Mouette <joss@debian.org>  Fri, 29 May 2009 11:25:35 +0200

gnome-settings-daemon (2.26.0-2) experimental; urgency=low

  * 20_gstreamer.patch: Initialize Gerror * variables to NULL before
    usage. Fixes a crasher when using media keys (Closes: #524165)

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 18 Apr 2009 11:00:25 +0100

gnome-settings-daemon (2.26.0-1) experimental; urgency=low

  * New upstream release.
  * Update build-dependencies.
  * Install the autostart file and the keybindings XML file.
    + Break gnome-session < 2.24 which would attempt to start it twice 
      with the autostart file.
  * 11_sleepkey.patch: updated for the new version.
  * 20_gstreamer.patch: new patch from Romain Périer, adds back support 
    for GStreamer with a selection at compile time.
  * 70_relibtoolize.patch: regenerated.
  * Refresh other patches.
  * Pass --disable-pulse to configure, to use the GStreamer code 
    instead.

 -- Josselin Mouette <joss@debian.org>  Sat, 11 Apr 2009 11:31:52 +0200

gnome-settings-daemon (2.24.1-2) unstable; urgency=low

  [ Josselin Mouette ]
  * Improve package descriptions. Mention XSETTINGS. Closes: #511905.