@@ -1,0 +1,1 @@
+debian/gnome-settings-daemon.1
