@@ -1,6 +1,10 @@
 gnome-settings-daemon (2.26.1-3) UNRELEASED; urgency=low
 
   * Add a watch file.
+  * Add a manpage for gnome-settings-daemon, thanks Joshua Cummings!
+    Closes: #494370.
+  * debian/control.in: remove trailing whitespaces.
+  * Standards-Version is 3.8.2, no changes needed.
 
  -- Emilio Pozuelo Monfort <pochu@ubuntu.com>  Fri, 10 Jul 2009 17:56:17 +0200
 
